# citor

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmark/: .clang-tidy  CMakeLists.txt  affinity_sweep_bench.cpp  balance_sweep_bench.cpp  bench_export.h  bench_format.h  bench_main.cpp  bulk_for_queries_bench.cpp  chain_bench.cpp  cold_path_bench.cpp  competitor_traits.h  cross_ccd_parallel_for_bench.cpp  cycle_clock.h  differential_bench.cpp  empty_fanout_bench.cpp  fork_join_bench.cpp  forkjoin_cilksort_bench.cpp  forkjoin_knapsack_cancel_bench.cpp  forkjoin_matmul_dac_bench.cpp  forkjoin_pool_group_cross_ccd_bench.cpp  forkjoin_skynet_bench.cpp  forkjoin_strassen_bench.cpp  forkjoin_uts_bench.cpp  granularity_bench.cpp  harness.h  libfork_runners.cpp  libfork_runners.h  matmul_bench.cpp  multi_arena_harness.h  parallel_for_cold_dispatch_bench.cpp  parallel_reduce_bench.cpp  parallel_reduce_pareto_bench.cpp  parallelfor_heat_bench.cpp  pareto_body_bench.cpp  plex_bench.cpp  recursive_forkjoin_helper.h  runplex_heat_bench.cpp  runplex_stencil_bench.cpp  scan_bench.cpp  tmc_runners.cpp  (+1 more)
benchmark/bulk_for_queries/: bulk_for_queries_bench.cpp
benchmark/chain/: chain_bench.cpp
benchmark/competitor_traits/: competitor_traits.h
benchmark/differential/: differential_bench.cpp
benchmark/fork_join/: fork_join_bench.cpp  forkjoin_cilksort_bench.cpp  forkjoin_knapsack_cancel_bench.cpp  forkjoin_matmul_dac_bench.cpp  forkjoin_mixed_detached_sync_bench.cpp  forkjoin_pool_group_cross_ccd_bench.cpp  forkjoin_skynet_bench.cpp  forkjoin_strassen_bench.cpp  forkjoin_uts_bench.cpp
benchmark/harness/: aligned_alloc.h  bench_export.h  bench_format.h  bench_main.cpp  bench_registry.h  cycle_clock.h  harness.h  libfork_runners.cpp  libfork_runners.h  recursive_forkjoin_helper.h  tmc_runners.cpp  tmc_runners.h
benchmark/parallel_for/: affinity_sweep_bench.cpp  balance_sweep_bench.cpp  cold_path_bench.cpp  cross_ccd_parallel_for_bench.cpp  empty_fanout_bench.cpp  granularity_bench.cpp  matmul_bench.cpp  parallel_for_cold_dispatch_bench.cpp  pareto_body_bench.cpp
benchmark/reduce/: parallel_reduce_bench.cpp  parallel_reduce_pareto_bench.cpp
benchmark/run_plex/: plex_bench.cpp  runplex_heat_bench.cpp  runplex_stencil_bench.cpp
benchmark/scan/: scan_bench.cpp
benchmark/two_pool/: bench_main_two_pool.cpp  blas_coexistence_bench.cpp
cmake/: CitorInstall.cmake  CitorOptions.cmake  CitorTarget.cmake  CitorWarnings.cmake  GTestDep.cmake  Tooling.cmake  citorConfig.cmake.in
include/citor/: always_assert.h  cancellation.h  chain.h  coherence_cache.h  coro.h  example_hints.h  function_ref.h  hints.h  pool_group.h  thread_pool.h  version.h
include/citor/cpos/: bulk_for_queries.h  fork_join.h  inclusive_scan.h  parallel_chain.h  parallel_for.h  parallel_reduce.h  parallel_scan.h  run_plex.h  submit_detached.h
include/citor/detail/: chain_state.h  chase_lev_deque.h  coherence_probe.h  cpu_relax.h  dispatch_dynamic.h  dispatch_static.h  forkjoin_state.h  futex_park.h  hints_traits.h  inline_fallback.h  job_descriptor.h  kahan.h  lookback_scan.h  plex_state.h  pool_control.h  reduce_tree.h  scan_state.h  topology.h  worker_loop.h  worker_state.h
packaging/conan/: conanfile.py
packaging/test/consumer/: CMakeLists.txt  conanfile.txt
packaging/test/consumer_cpm/: CMakeLists.txt
packaging/test/consumer_fetchcontent/: CMakeLists.txt  main.cpp
packaging/test/consumer_single_header/: main.cpp
packaging/vcpkg/ports/citor/: portfile.cmake  vcpkg.json
scripts/: amalgamate_hook.py  bench_diff.py  check_doc_comments.py  check_doc_strings.py  clang-tidy-diff-gate.sh  fix_doc_comments.py  plot.py  quickbench.sh  run_bench.sh  run_bench_isolated.sh  run_clang_tidy.py  run_ctest.py
scripts/bench/: cleanup_aws.sh  replicate.sh
single_include/: citor.hpp
tests/: CMakeLists.txt  bench_format_test.cpp  bulk_for_queries_cancellation_test.cpp  bulk_for_queries_cpo_test.cpp  bulk_for_queries_distribution_test.cpp  bulk_for_queries_exception_test.cpp  bulk_for_queries_partition_test.cpp  bulk_for_queries_test.cpp  cancellation_deadline_test.cpp  cancellation_exception_test.cpp  cancellation_token_test.cpp  chase_lev_deque_concurrent_test.cpp  chase_lev_deque_growth_test.cpp  chase_lev_deque_single_thread_test.cpp  chase_lev_deque_test.cpp  coherence_cache_test.cpp  coherence_probe_test.cpp  coro_wrapper_test.cpp  fork_join_affinity_test.cpp  fork_join_cancellation_test.cpp  fork_join_determinism_test.cpp  fork_join_distribution_test.cpp  fork_join_edge_test.cpp  fork_join_errors_test.cpp  fork_join_spawn_sync_test.cpp  fork_join_test.cpp  function_ref_test.cpp  hints_test.cpp  inclusive_scan_cpo_test.cpp  multi_pool_coexist_test.cpp  parallel_chain_barriers_test.cpp  parallel_chain_basic_test.cpp  parallel_chain_cancellation_test.cpp  parallel_chain_cpo_test.cpp  parallel_chain_distribution_test.cpp  parallel_chain_exceptions_test.cpp  parallel_chain_inline_fallback_test.cpp  parallel_chain_partition_test.cpp  parallel_chain_test.cpp  parallel_for_blocking_test.cpp  (+73 more)
tests/packaging/: run_packaging_tests.sh
tests/packaging/add_subdirectory_consume/: CMakeLists.txt
tests/packaging/cpm_consume/: CMakeLists.txt
tests/packaging/fetchcontent_consume/: CMakeLists.txt  main.cpp
tests/packaging/find_package_consume/: CMakeLists.txt  main.cpp
tests/packaging/single_header_consume/: main.cpp
tools/: amalgamate.py
tools/bench/: __init__.py  __main__.py  diff.py  host.py  isolated.py  packaging.py  quick.py  run.py
tools/plot_bench/: README.md  __init__.py  __main__.py  loader.py  plot.py  style.py
